--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   auth_buttons: ^0.0.4
-  firebase_auth: ^0.18.4+1
-  firebase_core: ^0.5.3
+  firebase_auth: ^0.19.0+1
+  firebase_core: ^0.6.0
   google_sign_in: ^4.5.6
+  cloud_firestore: ^0.15.0
+  firebase_messaging: ^8.0.0-dev.12
+  firebase_storage: ^6.0.0
+  webview_flutter: ^1.0.7
 
 dev_dependencies:
   flutter_test:
