--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   firebase_messaging: ^8.0.0-dev.12
   firebase_storage: ^6.0.0
   webview_flutter: ^1.0.7
+  youtube_player_flutter: ^7.0.0+7
+  flare_flutter: ^2.0.6
+  url_launcher: ^5.7.2
+  flutter_linkify: ^3.1.3
 
 dev_dependencies:
   flutter_test:
